# sicora-app

./: .env.prod.example  .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  docker-compose.prod.yml  docker-compose.test.yml  package.json  sonar-project.properties.disabled
sicora-be-python/: .env.development  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
sicora-be-python/.docker-build/: Dockerfile.apigateway  Dockerfile.notification
sicora-be-python/.docker-build/apigateway/: Dockerfile
sicora-be-python/aiservice/: .env.example  Dockerfile  README.md  requirements.txt
sicora-be-python/aiservice/app/application/use_cases/: ai_model_use_cases.py  alert_use_cases.py  chat_use_cases.py
sicora-be-python/aiservice/app/domain/entities/: ai_model.py  alert.py  prediction_result.py
sicora-be-python/aiservice/app/domain/value_objects/: ai_prompt.py  message.py
sicora-be-python/aiservice/app/infrastructure/adapters/: factory.py
sicora-be-python/aiservice/app/infrastructure/repositories/: ai_model_repository_impl.py
sicora-be-python/aiservice/app/presentation/schemas/: analytics_schemas.py  chat_schemas.py  model_schemas.py
sicora-be-python/aiservice/tests/: __init__.py  conftest.py
sicora-be-python/aiservice/tests/integration/: test_chat_api.py
sicora-be-python/aiservice/tests/unit/: test_enhanced_chat_service.py  test_kb_integration.py  test_simple_openai_client.py
sicora-be-python/attendanceservice/: Dockerfile
sicora-be-python/database/init/: 01_init_db_users_schemas.sql
sicora-be-python/deployment/: Dockerfile.apigateway  Dockerfile.notification  docker-compose.production.yml  docker-compose.staging.yml  nginx-sicora.conf
sicora-be-python/evalinservice/: Dockerfile
sicora-be-python/kbservice/: Dockerfile  README.md  main.py  pytest.ini  requirements.txt
sicora-be-python/kbservice/app/: dependencies.py
sicora-be-python/kbservice/app/domain/entities/: kb_entities.py
sicora-be-python/kbservice/app/presentation/schemas/: kb_schemas.py
sicora-be-python/kbservice/tests/: conftest.py
sicora-be-python/kbservice/tests/integration/: test_kb_api.py
sicora-be-python/kbservice/tests/unit/: test_hybrid_search_service.py  test_openai_embedding_service.py
sicora-be-python/mevalservice/: main.py
sicora-be-python/mevalservice/app/: scheduler.py
sicora-be-python/mevalservice/app/application/usecases/: __init__.py  appeal_usecase.py  committee_usecase.py  improvement_plan_usecase.py  sanction_usecase.py  (+1 more)
sicora-be-python/mevalservice/app/domain/: repositories.py
sicora-be-python/projectevalservice/: README.md  requirements.txt
sicora-be-python/projectevalservice/app/: __init__.py
sicora-be-python/projectevalservice/app/infrastructure/: dependencies.py
sicora-be-python/projectevalservice/tests/: __init__.py  conftest.py
sicora-be-python/projectevalservice/tests/integration/: __init__.py  test_criteria_api.py  test_stakeholder_api.py
sicora-be-python/projectevalservice/tests/unit/: __init__.py  test_criteria_use_cases.py  test_stakeholder_use_cases.py
sicora-be-python/scheduleservice/: Dockerfile
sicora-be-python/scripts/: prepare-vps-deployment.sh  validate-vps-endpoints.sh
sicora-be-python/softwarefactoryservice/: Dockerfile.dev
sicora-be-python/userservice/: Dockerfile
(+707 files in other folders)
